--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Elementos</title>
+    <title>Selecciona un Elemento</title>
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1>Lista de Elementos</h1>
-    <ul id="lista"></ul>
-    <hr>
-    <h2 id="titulo">Selecciona un elemento</h2>
-    <p id="descripcion"></p>
+    <h1>Selecciona un elemento</h1>
+    
+    <!-- Menú desplegable -->
+    <select id="lista">
+        <option value="">-- Selecciona un elemento --</option>
+    </select>
+
+    <!-- Botón para ir a la página de detalles -->
+    <button onclick="irADetalle()">Ver Detalles</button>
 </body>
 </html>
